tests/ui/feature-gates/feature-gate-custom_mir.stderr
error[E0658]: the `#[custom_mir]` attribute is just used for the Rust test suite
  --> $DIR/feature-gate-custom_mir.rs:5:1
   |
LL | #[custom_mir(dialect = "built")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(custom_mir)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: Could not parse body with block decls, found: "Literal { lit: Spanned { node: Int(Pu128(0), Unsuffixed), span: $DIR/feature-gate-custom_mir.rs:7:5: 7:6 (#0) }, neg: false }"
  --> $DIR/feature-gate-custom_mir.rs:7:5
   |
LL |     0
   |     ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
